--- a/find-courses.html
+++ b/find-courses.html
@@ -84,6 +84,7 @@
         <img src="logo/logo-large.png" alt="Project Tiger Logo">
         <h1>Project Tiger</h1>
     </div>
+    <div class="hamburger" onclick="toggleMenu()">☰</div> <!-- Hamburger Icon -->
     <nav>
         <a href="index.html">Home</a>
         <a href="find-courses.html">Courses</a>
@@ -108,6 +109,13 @@
     </div>
 
     <script>
+        function toggleMenu() {
+    const nav = document.querySelector(".navbar nav");
+    const overlay = document.querySelector(".overlay");
+
+    nav.classList.toggle("active");
+    overlay.classList.toggle("active");
+}
         let courseList = []; // List to store course previews
 
         // Fetch course data from the JSON file
