--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <img src="logo/logo-large.png" alt="Project Tiger Logo">
             <h1>Project Tiger</h1>
         </div>
+        <div class="hamburger" onclick="toggleMenu()">☰</div> <!-- Hamburger Icon -->
         <nav>
             <a href="index.html">Home</a>
             <a href="find-courses.html">Courses</a>
@@ -170,6 +171,7 @@
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
         </nav>
+        
     </div>
 
     <div class="berkeley-section">
@@ -210,6 +212,18 @@
 
 
     <script>
+    function toggleMenu() {
+        const nav = document.querySelector(".navbar nav");
+        nav.classList.toggle("active");  // Toggle the 'active' class for showing/hiding menu
+
+        // Toggle rolling animation classes for smooth transition
+        if (nav.classList.contains("active")) {
+            nav.style.maxHeight = nav.scrollHeight + "px";
+        } else {
+            nav.style.maxHeight = "0";
+        }
+    }
+        
         async function fetchCourses() {
             try {
                 const response = await fetch('./data/updated_course_data_with_grades.json');
